--- a/Final_Manuscript.Rmd
+++ b/Final_Manuscript.Rmd
@@ -67,25 +67,24 @@ library(xtable)
 library(rmarkdown)
 ```
     
-@robertsfredrickson Objectification Theory, suggests that, in addition to being steeped in a culture that objectifies women, women are objectified in actual interpersonal encounters. The negative effects of this interpersonal objectification are theorized be the strongest when it is a man doing the objectifying [@gervais2011you], but what are the consequences when a woman objectifies another woman in an interaction? Psychological researchers studying the sexual objectification of women, have in recent years explored the interpersonal process of the objectification, finding evidence for self-objectification in the target as a proximal consequence [@garcia2016objectification, @strelan2018birds, @riemer2020self]. For example, in a face-to-face mixed-gender dyadic study, @garcia2016objectification found that men’s reported objectification of their female interaction partner was associated with increased self-objectification reported by their partner. They did not include same-gender, woman-woman interacting pairs. @gervais2020social have reviewed the literature on interpersonal self-objectification and has organized the process in a theoretical model called the Social Interaction Model of Objectification (SIMO), but this model is currently only relevant for mixed-gender encounters. Although there is ample evidence that women objectify other women [@loughnan2015exploring; @puvia2013being], there are currently no studies investigating the process of interpersonal objectification in same-gender interactions. Does objectification by a female interaction partner have the same downstream negative consequences as being objectified by a male interaction partner? The current dyadic study addresses this omission using interacting pairs where both members identify as women. 
+@robertsfredrickson Objectification Theory, suggests that, in addition to being steeped in a culture that objectifies women, women are objectified in actual interpersonal encounters. The negative effects of this interpersonal objectification for women are theorized be the strongest when it is a man doing the objectifying [@calogero2004test; @gervais2011you; @gay2010my], but what are the consequences when a woman objectifies another woman in an interaction? Psychological researchers studying the sexual objectification of women, have in recent years explored the interpersonal process of the objectification, finding evidence for self-objectification in the target as a proximal consequence of being objectified [@garcia2016objectification, @strelan2018birds, @riemer2020self]. In a recent review, @gervais2020social organized the extant literature on interpersonal self-objectification and proposed a theoretical model called the Social Interaction Model of Objectification (SIMO), however this model focuses on mixed-gender encounters. Although there is evidence that women objectify other women [@loughnan2015exploring; @puvia2013being], there are currently no studies investigating the process of interpersonal objectification in interactions between women. Is objectification by a female interaction partner related to an increase in self-objectification for the woman being objectified? Further, does objectification by a woman have the same downstream negative consequences for women as being objectified by a male interaction partner? The current study begins to address these questions by investigating interpersonal objectification among interacting pairs where both partners identify as women. 
 
 ##Self-Objectification
-Self-objectification is a psychological process that provides a cognitive mechanism to translate the experiences of interpersonal objectification [@loughnan2015exploring] to negative mental health outcomes (e.g., anxiety, self-esteem, and cognitive performance) [@calogero2011; @moradi2008]. @calogero2011 proposes that self-objectification can be conceptualized as a learned trait, or *trait* self-objectification (TSO). Furthermore, it can also be elicited momentarily, through the media, for example, with sexualized images in movies and magazines [@morry2001magazine], or when wearing sexualizing clothing [@fredrickson1998swimsuit]. This momentary self-objectification is referred to as *state* self-objectification [@bernard2018bodies; @calogero2011; @moradi2008]. Being objectified by another person may interact TSO to effect experiences of feeling like a body, or state self-objectification [SSO; @garcia2016objectification].
+Self-objectification is a psychological process that provides a cognitive mechanism to translate the experiences of interpersonal objectification [@loughnan2015exploring] to negative mental health outcomes (e.g., anxiety, self-esteem, and cognitive performance) [@calogero2011; @moradi2008]. @calogero2011 proposes that self-objectification can be conceptualized as a learned trait, or *trait* self-objectification (TSO). Furthermore, self-objectification can also be elicited momentarily, for example, when viewing sexualized images in movies and magazines [@morry2001magazine], when trying on sexualizing clothing [@fredrickson1998swimsuit], or during video chat when you believe your interaction partner can only see your body [not face; @saguyetal2010]. This momentary self-objectification is referred to as *state* self-objectification [SSO; @bernard2018bodies; @calogero2011; @moradi2008] and is characterized by feeling like a body rather than a full self within a particular moment, instance, or context [@robertsfredrickson]. 
 
-##Women Objectifying Women
-@harsey2020men found that self-objectification was related to the objectification of women to a similar degree for men and women. Additionally, @strelan2005women found that the more women self-objectify, the more they objectify other women. Could the process work in the other direction as well, that is, could objectification by a woman produce self-objectification, in a similar manner to mixed-gender interactions? 
-
-Past research has focused on men’s objectifying behaviors, with little attention paid to the role that women may also play in objectifying other women. @hill2008examining assessed women’s experiences of objectification from men independently from women’s experiences of objectification from other women. They found that women may be socialized not only to see themselves as objects, but perhaps to see other women as objects as well. This process, however, was not comfirmed to occur during an actual interpersonal interaction. @loughnan2015exploring found that women objectify other women to a greater extent than they objectify men. Women have also been found to objectify (dehumanized) sexualized targets presented as images [@puvia2013being], but very little is known about interpersonal sexual objectification among women and what the proximal effects of this objectification might be. We do know that objectification has more adverse consequences for women than men [@gervais2011you; @moradi2008; @saguyetal2010], however, if women objectify other women, perhaps even to a stronger degree than they objectify men, this woman to woman objectification might have detrimental outcomes. 
+There is evidence that being objectified by another person during an interaction elicits SSO. For example, in a face-to-face mixed-gender dyadic study, @garcia2016objectification found that men’s reported objectification of their female interaction partner was associated with increased self-objectification as reported by their female partner. Further, this negative effect of the men's objectification on women's SSO was strongest for women higher in TSO. The current study uses this same dyadic paradigm to study same-gender, woman-woman interacting pairs. 
 
 ##Interpersonal Objectification
-Studies have shown that within social encounters women are gazed at more than men [@briton1995], often times feel ‘looked at’ within interpersonal interactions [@argyle1969; @miles2015stop], and are likely to internalize the objectifying gaze on their physical self [@puvia2013being; @young1979]. Moreover, perhaps the most adverse effect is that being objectified socializes girls and women to treat themselves as objects to be looked at and evaluated [@Bartky; @berger1972; @fredrickson1998swimsuit]. @gervais2020social recently reviewed the research on interpersonal objectification and organized our current theoretical understanding of this process in the Social Interaction Model of Objectification (SIMO). What is clear from @gervais2020social's review is that we know little about women-on-women interpersonal objectification. Could there also be negative consequences of this type of interpersonal objectification? 
+Studies have shown that within social encounters women are gazed at more than men [@briton1995], often times feel ‘looked at’ within interpersonal interactions [@argyle1969; @miles2015stop], and are likely to internalize the objectifying gaze on their physical self [@puvia2013being; @young1979]. Interpersonal objectification has been found to have negative consequences for women. @gervais2011you found that an objectifying gaze by a male interaction partner (confederate) was associated with lower math performance for women, than being objectified by a female interaction partner. Moreover, perhaps the most adverse effect of interpersonal objectificaiton is that being objectified socializes girls and women to treat themselves as objects to be looked at and evaluated [@Bartky; @berger1972; @fredrickson1998swimsuit]. @gervais2020social recently reviewed the research on interpersonal objectification and organized our current theoretical understanding of this process in the Social Interaction Model of Objectification (SIMO). What is clear from @gervais2020social's review is that we know little about women-on-women interpersonal objectification. Could there also be negative consequences of this type of interpersonal objectification? 
 
 Interpersonal objectification can also occur within the context of romantic relationships, in addition to interactions with strangers. Among heterosexual male and female college students, self-objectification has been found to be positively associated with the extent to which they objectify their romantic partners [@zurbriggen2011self]. Researchers have also studied interpersonal objectification and self-objectification in romantic relationships [@strelan2018birds]. Evidence is mixed, suggesting that women can sometimes have positive outcomes from appearance valuation within the context of an established romantic relationship. There is also evidence that they experience less SSO after appearance comments within romantic relationships [@meltzer2020women], but less is known about first dates. An important caveat to this literature is that it is only about heterosexual relationships. A recent study has investigated the effect of self-objectification on the reduction of relationship building skills in general (including same-sex friendships) [@teran2020relational]. Both romantic relationships and stranger encounters have been studied in the context of objectification, but neither of these literatures have investigated specifically same-gender relationships.
 
-There is evidence that the experience of state self-objectification in mixed-gender contexts (stranger and romantic) has negative consequences for women, but what about in the context of interactions with other women? Is the self-objectification experienced in mixed-gender interactions associated with the same negative process as that experienced in same-gender interactions? On the one hand, the ample research demonstrating that the male gaze has a particularly detrimental effect would suggest no [@saguyetal2010, @calogero2004test; @gervais2011you; @gay2010my; @yilmaz2019whose], but on the other hand, women do objectify other women [@puvia2013being; @loughnan2015exploring; @harsey2020men]. When they do it, does it lead to self-objectification in the same way men's objectification of women does [@garcia2016objectification]? If so, does the self-objectification experienced in these same-gender interactions have the same negative consequences for authenticity in that interaction?  
+There is evidence that the experience of state self-objectification in mixed-gender contexts (stranger and romantic) has negative consequences for women, but what about in the context of interactions with other women? Is the self-objectification experienced in mixed-gender interactions associated with the same negative process as that experienced in same-gender interactions? The ample research demonstrating that the male gaze has a particularly detrimental effect for women would suggest no [@saguyetal2010, @calogero2004test; @gervais2011you; @gay2010my; @yilmaz2019whose], but, there is evidence that women do objectify other women [@puvia2013being; @loughnan2015exploring; @harsey2020men] and to would be helpful to understand the consequencs of this intragroup objectification for women. When women objectify other women, does it lead to self-objectification in the same way men's objectification of women does [@garcia2016objectification]? If so, does the self-objectification experienced in these same-gender interactions have the same negative consequences for authenticity in that interaction?  
 
-##Interpersonal Objectification and Authenticity
 There is some evidence that reduced authenticity is a consequence of self-objectification [@garcia2016objectification; @teran2020relational]. This link has been justified by the literature on stigmatized-stigmatizer interactions [@hebl2005promoting; @richeson2003prejudice; @shelton2005expecting], viewing the experience of being objectified in an interaction as an identity threat situation [@miles2015stop; @nadal2012effects]. Further, empirical evidence reveals that objectification manifests through inauthenticity in romantic relationships [@brunelletal2010], adverse attitudes in regard to career aspirations, and a decrease in concentration and impairment in female cognitive performance [@kahalon2018don; @quinnetal]. When a woman is objectified by a man, and subsequently experiences self-objectification, the intergroup nature of this encounter might trigger identity threat. Thus, perhaps there are fewer negative consequences when a woman is objectified by another woman, specifically, woman-woman interpersonal objectification processes might diverge from mix-gender interpersonal objectification processes precisely because they are not intergroup interactions (at least with respect to gender identity). A woman objectified by another woman may not be having the same negative consequences that cascade from situations that trigger group-based identity threat [@deaux1987putting; @dovidio2006nonverbal; @hebl2005promoting], but feeling like a body, rather than a full human, in any interaction (intergroup or ingroup) may be enough to reduce women's feelings of authenticity and social competence, regardless of the gender of the objectifyer [@tolman2006looking; @teran2020relational].
+
+##Women Objectifying Women
+Past research investigating women objectifying other women has focused on the psychological conditions that led women to objectify women. @harsey2020men found that self-objectification was related to the objectification of women to a similar degree for male and female participants. Along the same lines, @strelan2005women found that the more women self-objectify, the more they objectify other women. Could the process work in the other direction as well, that is, could objectification by a woman produce self-objectification, in a similar manner to objectification by a man? @hill2008examining assessed women’s experiences of objectification from men independently from women’s experiences of objectification from other women. They found that women may be socialized not only to see themselves as objects, but perhaps to see other women as objects as well. This process, however, was not comfirmed to occur during an actual interpersonal interaction. @loughnan2015exploring found that women objectify other women to a greater extent than they objectify men. Women have also been found to objectify (dehumanized) sexualized targets presented as images [@puvia2013being], but very little is known about interpersonal sexual objectification among women and what the proximal effects of this objectification might be. We do know that objectification has more adverse consequences for women than men [@gervais2011you; @moradi2008; @saguyetal2010], however, if women objectify other women, perhaps even to a stronger degree than they objectify men, this woman to woman objectification might have detrimental outcomes. 
 
 ##The Current Study
 In the current study, we sought to examine what occurs during an interaction in which one or both partners are objectifying each other, similarly to @garcia2016objectification, but between same-gender interpersonal interactions among women. Moreover, the current study uses a face-to-face interaction paradigm and dyadic data analysis techniques to examine the effects for both women simultaneously. Although the literature on woman-woman objectification is small, the results are mixed, and does not cover interpersonal encourters, we expected to replicate some of the results found in @garcia2016objectification. Most importantly, we predicted that being objectified by one’s interaction partner would lead to self-objectification. We also expected that TSO would moderate this relationship, amplifying the positive assocaition between being objectified and SSO for women higher in TSO. We hypothesized that SSO would, in turn, lead to feelings of inauthenticity [although there is ample support against this prediction from the identity threat within intergroup interactions literature; @rollero2016bringing]. Further, we hypothesized that these feelings of inauthencity would then be associated with reduced feelings of agency in romantic relationships, reduced career aspiration, and reduced cognitive performance. In summary, we expected to find a positive relationship between other-objectification by one's partner and state self-objectification. We also expected to find a negative relationship between self-state objectification and interaction authenticity, and that interaction authenticity will be positively related to cognitive performance, relationship agency, and career aspirations.
@@ -120,7 +119,7 @@ ns <- clarksmith_women %>%
   as.matrix() %>% as.numeric()
 ```
 
-Data from two demographically equivalent higher education institutions in the Northeast United States were combined to create the final analysis sample (*N =* `r nrow(clarksmith_women)`) used in this study. In the measures section that follows we refer to them as Sample 1 and Sample 2. Thirty-two previously unacquainted self-identifying female dyads (64 total participants) from institutions in the Northeast of the United States participated in this study. Sample 1 (*N =* `r ns[3]`) is from a co-ed liberal arts college and Sample 2 (*N =* `r ns[4]`) is from a women’s liberal arts college. More specifically, twelve of the pairs were students at a co-ed liberal arts college, while the remaining twenty pairs attended a women’s liberal arts college. [Footnote: Initially, data was collected from same-sex and mixed-sex dyads that comprised of male and female gendered individuals. Sample 1 originally consisted of twenty-two pairs, twelve men and thirty-two women. Twenty-three pairs made up of forty-three women and one man, as well as two participants who did not identify with either gender category, formed Sample 2. For consistency, we limited participant data to same sex female pairs at the two colleges.] All results presented below are from models including sample as a control variable.
+Data from two demographically similar higher education institutions in the Northeast United States were combined to create the final analysis sample (*N =* `r nrow(clarksmith_women)`) used in this study. In the measures section that follows we refer to them as Sample 1 and Sample 2. Thirty-two previously unacquainted self-identifying female dyads (64 total participants) from institutions in the Northeast of the United States participated in this study. Sample 1 (*N =* `r ns[3]`) is from a co-ed liberal arts college and Sample 2 (*N =* `r ns[4]`) is from a women’s liberal arts college. More specifically, twelve of the pairs were students at a co-ed liberal arts college, while the remaining twenty pairs attended a women’s liberal arts college. [Footnote: Initially, data was collected from same-sex and mixed-sex dyads that comprised of male and female gendered individuals. Sample 1 originally consisted of twenty-two pairs, twelve men and thirty-two women. Twenty-three pairs made up of forty-three women and one man, as well as two participants who did not identify with either gender category, formed Sample 2. For consistency, we limited participant data to same sex female pairs at the two colleges.] All results presented below are from models including sample as a control variable.
 
 ```{r demographics}
 #favstats(~TSO_A, data=clarksmith_women)
@@ -399,7 +398,7 @@ include_graphics("APIM_figure.png")
 include_graphics("theor_figure.png")
 ```
 
-This study sought to detect whether partners’ objectification of one another affected state self-objectification (SSO). Specifically, we were interested in testing the relationship between state-other objectification and SSO, and how SSO in turn, affects feelings of inauthenticity during the interaction. In addition, we also tested if the effect of other-objectification in an interaction on SSO is only present for those women who are high in trait self-objectification. Further, we investigated the relationships between experiencing interaction inauthenticity and relationship agency, career aspirations, and cognitive performance. 
+This study sought to detect whether partners’ objectification of one another affected state self-objectification (SSO). Specifically, we were interested in testing the relationship between state-other objectification and SSO, and how SSO in turn, affects feelings of inauthenticity during the interaction. In addition, we also tested if the effect of other-objectification in an interaction on SSO is only present for those women who are high in trait self-objectification. Further, we investigated the relationships between experiencing interaction inauthenticity and relationship agency, career aspirations, and cognitive performance.
 
 While past studies investigating objectification in interactions used dyadic path analysis [@garcia2016objectification], the current study used multilevel modeling proceedures. Dyadic analyses for distinguishable dyads (e.g., mixed-gender interacting pairs) is more natural in Structural Equation Modeling (SEM) than it is for indistinguishable dyads (e.g., same-gender interacting pairs), as we have here [@ledermann2017analyzing; @garcia2015moderation]. One reason for this asymmetry is that, due to the arbitrary distinctions made between "partner 1" and "partner 2" in indistinguishable dyads, many estimates need to be fixed to be equal (i.e., paths, variances, covariances, endogenous intercepts, and exogenous means), but these equality constraints should not then be considered in the degrees of freedom calculations for fit estimations [@olsen2006structural]. Further, @olsen2006structural details how a new independence model and the corresponding fit measure should be re-calculated for indistinguishable dyads models. The current study uses dyadic multilevel modeling (MLM) to test all relationships and mediation patterns. The online supplementary materials contains analysis using SEM. See @ledermann2017analyzing for a more complete discussion of the considerations for using SEM versus MLM for dyadic analysis.  
 
@@ -616,21 +615,24 @@ summary(apim5.c)
 Lastly, although there was no evidence that SSO was related to interaction authenticity in the current sample, we tested if interaction authenticity (composite of nine items) had effects on cognitive performance, career aspirations, and relationship agency, as it did in @garcia2016objectification. We again used MLM and thus, these effects were tested in three separate models. There was no significant effect of interaction authenticity on cognitive performance, `r report_stats(apim3, 2)`, but authenticity was significantly positively related to both career aspirations, `r report_stats(apim5, 2)`, and relationship agency, `r report_stats(apim4, 2)`. There was no direct effect of SSO on cognitive performance, `r report_stats(apim3.b, 3)`, and no direct effect of partner's other objectification on cognitive performance, `r report_stats(apim3.c, 4)`. There was no direct effect of SSO on career aspirations, `r report_stats(apim5.b, 3)`, and no direct effect of partner's other objectification on career aspirations, `r report_stats(apim5.c, 4)`. There was no direct effect of SSO on relationship agency, `r report_stats(apim4.b, 3)`, and no direct effect of partner's other objectification on relationship agency, `r report_stats(apim4.c, 4)`. 
 
 #Discussion
-The current study tested whether the model of interpersonal objectification and state self-objectification (SSO) used in @garcia2016objectification replicates in a same-gender dyadic sample of women only. Although past research has found that women do objectify other women [@puvia2013being; @loughnan2015exploring; @harsey2020men], this is the first study to test if *interpersonal* other-objectification by women is related to state self-objectification in their woman-identified interaction partners. As hypothesized, the current study did find a significant relationship between a woman's interaction partner's report of having objectified her and her own post-interaction feelings of self-objectification. That is, there was a significant partner effect of other-objectification on SSO. This effect extends the equivalent relationship found in mixed-gender interactions to the context of same-gender interactions between women. Thus, evidence suggests that it is not only the male gaze, and male other-objectification that is related to women's state self-objectification, but being objectified by another woman can also result in SSO, at least in the context of a scenario where they know they are being evaluated as a potential dating partner. [Asha:Or … thus evidence provides support for the claim that women being objectified by another woman result in sso in ways that are not uniquely dissimilar from that of xyz]
+The current study tested whether the model of interpersonal objectification and state self-objectification (SSO) used in @garcia2016objectification replicates in a same-gender dyadic sample of women only. Although past research has found that women do objectify other women [@puvia2013being; @loughnan2015exploring; @harsey2020men], this is the first study to test if *interpersonal* other-objectification by women is related to state self-objectification in their woman-identified interaction partners. As hypothesized, the current study did find a significant relationship between a woman's interaction partner's report of having objectified her and her own post-interaction feelings of self-objectification. That is, there was a significant partner effect of other-objectification on SSO. This effect extends the equivalent relationship found in mixed-gender interactions to the context of same-gender interactions between women. Thus, evidence suggests that it is not only the male gaze, and male other-objectification that is related to women's state self-objectification, but being objectified by another woman can also result in SSO, at least in the context of a scenario where they know they are being evaluated as a potential dating partner. 
 
-As is the case in all correlational studies, we cannot be sure about the causal direction. It could be that women's SSO causes them to be objectified by their interaction partner. This interpretation is theoretically interesting given that, in both the @garcia2016objectification study and in the current study, it is *women's* SSO that relates to being objectified by one's partner. However, Objectification Theory [@robertsfredrickson], as well as past experimental studies [@saguyetal2010; CITE], suggest that the causal flow is from other-objectification to SSO. Although, the current study found evidence for the partner effect of other-objectification on SSO, there was a lack of evidence for the connections between SSO and downstream negative consequences. 
+MORE ABOUT THIS PARTNER EFFECT
 
-Where the results of the current study diverge most notably from the results of studies testing interpersonal objectification among mixed-gender dyads is the lack of evidence for relationships between SSO and interaction inauthenticity. In addition, we found no evidence of *direct* or *indirect* relationships between SSO and cognitive functioning, relationship agency, and career aspirations. Nor was there evidence of *direct* or *indirect* relationships between other-objectification and any of these outcomes. This is somewhat suprising given the extant evidence linking SSO and cognitive functioning [@fredrickson1998swimsuit; @quinn2011performance; and see @moradi2008 for a review] and the small, but extant research on interpersonal other-ojectification and cognitive functioning [@logel2009interacting; @garcia2016objectification]. This lack of evidence could potentially signal diverging processes between women's experiences with interpersonal objectification from men and interpersonal objectification from women. There is quite a bit of evidence suggesting that the male gaze is particularly detrimental [@calogero2004test; @robertsfredrickson; @gervais2011you; @gervais2013my], and perhaps the self-objectification experienced within an interaction with a women is not as harmful as the self-objectification experienced within an interaction with a man. As a strong note of caution, it is best not to interpret a null result as evidence of no relationship. 
+As is the case in all correlational studies, we cannot be sure about the causal direction. It could be that women's SSO causes them to be objectified by their interaction partner. This interpretation is theoretically interesting given that, in both the @garcia2016objectification study and in the current study, it is *women's* state self-objectification that relates to being objectified by one's partner. However, Objectification Theory [@robertsfredrickson], as well as past experimental studies [@saguyetal2010], suggest that the causal flow is from other-objectification to SSO. 
+
+Where the results of the current study diverge most notably from the results of studies testing interpersonal objectification among mixed-gender dyads is the lack of evidence for relationships between SSO and interaction inauthenticity. In addition, we found no evidence of *direct* or *indirect* relationships between SSO and cognitive functioning, relationship agency, and career aspirations. Nor was there evidence of *direct* or *indirect* relationships between other-objectification and any of these outcomes. This is somewhat suprising given the extant evidence linking SSO and cognitive functioning [@fredrickson1998swimsuit; @quinn2011performance; and see @moradi2008 for a review] and the research on interpersonal other-ojectification and cognitive functioning [@logel2009interacting; @garcia2016objectification; @gervais2011you]. This lack of evidence could potentially signal diverging processes between women's experiences with interpersonal objectification from men and interpersonal objectification from women. There is quite a bit of evidence suggesting that the male gaze is particularly detrimental [@calogero2004test; @robertsfredrickson; @gervais2011you; @gervais2013my], and perhaps the self-objectification experienced within an interaction with a women is not as harmful as the self-objectification experienced within an interaction with a man. However, as a strong note of caution, it is best not to interpret a null result as evidence of no relationship. 
 
 The lack of evidence for a relationship between SSO and interaction authenticity is surprising and again, should not be interpreted as evidence of no relationship. It should be noted that the estimate of this relationship was very small, but in the negative direction, as anticipated. If it is the case that there is a smaller (i.e., weaker) connection between women's feelings of SSO and inauthenticity in interactions with other women than in interactions with men, models of interpersonal objectification, like the SIMO [@gervais2020social], could be extended by including inauthenticity as a potential mediating factor. Further, gender of the objectifyer/interaction partner could also be added to the SIMO model to help understand the circumstances that require other-objectification and SSO to have negative consequences for women.  
 
-Although we did not find a connection between SSO and authenticity, we did find significant positive relationships between authenticity and relationship agency, and authenticity and career aspirations. The relationship between authenticity and cognitive functioning was also estimated as positive, but was not statistically signficant. Again, due to the lack of connection between SSO and authenticity, we found no evidence of *indirect* relationships between SSO and these outcome variables. This evidence of a relationship between authenticity and the relational outcome variables (i.e., relationship agency and career aspirations) provides evidence that corroborates past findings that felt authenticity in interactions is important for healthy relationship functioning [@garcia2016objectification; @teran2020relational]. Just as authenticity has been found to be important in intergroup interactions [@brunelletal2010; @garcia2016objectification; @tolman2006looking], we again find more evidence here that disruptions in feelings of authenticity can negatively impact relationships beyond the current partner. Although the current study did not find a connection between authenticity and SSO, this seems theoretically to be a natural connection, and future work must explore when and how SSO leads to inauthenticity in interpersonal objectification situations. 
-
+Although the urrent study did not find a connection between SSO and authenticity, we did find significant positive relationships between authenticity and relationship agency, and authenticity and career aspirations. The relationship between authenticity and cognitive functioning was also estimated as positive, but was not statistically signficant. Again, due to the lack of connection between SSO and authenticity, we found no evidence of *indirect* relationships between SSO and these outcome variables. This evidence of a relationship between authenticity and the relational outcome variables (i.e., relationship agency and career aspirations) provides evidence that corroborates past findings that felt authenticity in interactions is important for healthy relationship functioning [@garcia2016objectification; @teran2020relational]. Just as authenticity has been found to be important in intergroup interactions [@brunelletal2010; @garcia2016objectification; @tolman2006looking], we again find more evidence here that disruptions in feelings of authenticity can negatively impact relationships beyond the current partner. Although the current study did not find a connection between authenticity and SSO, this seems theoretically to be a natural connection, and future work must explore when and how SSO leads to inauthenticity in interpersonal objectification situations. 
 
 ##Limitations and Future Directions
 
 ###Sample Characteristics
 In addition to being small and combined across two institutions, the sample of the current study was comprised of Western women, being that sexual objectification is most prevalent in this culture [@loughnan2015], and research on objectification conducted outside of Western or Westernized countries is scarce [@moradi2008], although more current work examines objectification from a cross-cultural framework [@loughnan2015, @wollast2020cultural]. Since “bodies exist within social and cultural contexts, and hence are also constructed through sociocultural practices and discourses” [@robertsfredrickson, p.174], it is important to consider how diverse social identities within unique cultural contexts may inform sexual objectification phenomenon to test the cross-cultural applicability of theoretical frameworks [@loughnan2015]. Further, sexualizing experiences and self-objectification are thought to begin a very young age, and thus, researchers have only recently begun to examine such experiences among children [e.g., @holland2016; @jongenelis2014; @bury2016]. Considering the fact that the average mean age of the investigated participants of this current study was 18.85 years, research among younger and older individuals is needed, especially because self-objectification may change over time [@robertsfredrickson]. It may be valuable to question the extent to which children, adolescents, or emerging adults of different races or ethnicities are exposed to varied amounts of sexualizing content. [Kat: Or a longitudinal study is needed.]
+
+Men-men 
 
 ###Sexual Objectification and the Objectifyer's Gender
 The current sample contained a mixture of heterosexual and non-heterosexual women, but all participants were asked to think about and evaluate their partner as a potential dating/romantic partner. We think that hetereosexual women are able to do this with other women as their target---and there is evidence that they might do this readily [@strelan2005women; @puvia2013being]---they may be even more apt to activate social comparison processes [@festinger1954theory] than women who are sexually attracted to other women (non-heterosexual women). This differential psychological process between women with differing sexualities might have served to dampen our ability to detect relationships, adding variability. [Kat: The only other thing I would add re: sexuality limitations are that we didn’t collect/use sexual orientation, so we couldn’t analyze results by that at all/our samples might have differed there.]
